--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 ┗━┛┗━╸┗━┛┗━┛
 
 
+<a href="blog/badchars">badchars</a> | <pk>2024-05-16</pk>
+ROPEmporium Writeup Part 5
+
 <a href="blog/write4">write4</a> | <pk>2024-02-02</pk> 
 ROPEmporium Writeup Part 4
 
