--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 ┣┻┓┃  ┃ ┃┃╺┓
 ┗━┛┗━╸┗━┛┗━┛
 
+<a href="blog/fluff">fluff</a> | <pk>2024-05-23</pk>
+ROPEmporium Writeup Part 6
 
 <a href="blog/badchars">badchars</a> | <pk>2024-05-16</pk>
 ROPEmporium Writeup Part 5
