--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
     
 
 
-┏━┓┏┓ ┏━┓╻ ╻╺┳╸       • she / her
-┣━┫┣┻┓┃ ┃┃ ┃ ┃        • bilingual (en / es)
-╹ ╹┗━┛┗━┛┗━┛ ╹        • artist / graphic designer
-                      • hacker
-		      • violinist
+<mono>┏━┓┏┓ ┏━┓╻ ╻╺┳╸       </mono>• she / her
+<mono>┣━┫┣┻┓┃ ┃┃ ┃ ┃        </mono>• bilingual (en / es)
+<mono>╹ ╹┗━┛┗━┛┗━┛ ╹        </mono>• artist / graphic designer
+<mono>                      </mono>• hacker
+<mono>                      </mono>• violinist
 
 
 <a rel="me" href="https://infosec.exchange/@amelia">[fediverse]</a> <a href="mailto:amelia.is.i@protonmail.com">[email]</a> <a href="portfolio/">[portfolio]</a> <y><a href="gemini://tilde.pink/~amelia/">[gemini]</a></y>
 
 
-┏┓ ╻  ┏━┓┏━╸
-┣┻┓┃  ┃ ┃┃╺┓
-┗━┛┗━╸┗━┛┗━┛
+<mono>┏┓ ╻  ┏━┓┏━╸</mono>
+<mono>┣┻┓┃  ┃ ┃┃╺┓</mono>
+<mono>┗━┛┗━╸┗━┛┗━┛</mono>
 
 <a href="blog/fluff">fluff</a> | <pk>2024-05-23</pk>
 ROPEmporium Writeup Part 6
