--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 <mono>┣┻┓┃  ┃ ┃┃╺┓</mono>
 <mono>┗━┛┗━╸┗━┛┗━┛</mono>
 
+<a href="blog/headless">headless</a> | <pk>2024-07-09</pk>
+Writeup for HackTheBox Headless
+
 <a href="blog/fluff">fluff</a> | <pk>2024-05-23</pk>
 ROPEmporium Writeup Part 6
 
