--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 <mono>┣┻┓┃  ┃ ┃┃╺┓</mono>
 <mono>┗━┛┗━╸┗━┛┗━┛</mono>
 
+<a href="blog/gemini-requests">gemini requests</a> | <pk>2024-09-03</pk>
+Building a Gemini Client Part 1: Requests
+
 <a href="blog/headless">headless</a> | <pk>2024-07-09</pk>
 Writeup for HackTheBox Headless
 
