restructure and update style

--- a/index.html
+++ b/index.html
@@ -26,12 +26,11 @@
 <a rel="me" href="https://infosec.exchange/@amelia">[fediverse]</a> <a href="mailto:amelia.is.i@protonmail.com">[email]</a> <a href="portfolio/">[portfolio]</a> <y><a href="gemini://tilde.pink/~amelia/">[gemini]</a></y>
 
 
-<mono>┏┓ ╻  ┏━┓┏━╸</mono>
-<mono>┣┻┓┃  ┃ ┃┃╺┓</mono>
-<mono>┗━┛┗━╸┗━┛┗━┛</mono>
+<a href="https://github.com/m33ls/chip8">chip8</a> | <pk> 2025-01-13</pk>
+Chip8 emulator in Rust
 
 <a href="blog/gemini-requests">gemini requests</a> | <pk>2024-09-03</pk>
-Building a Gemini Client Part 1: Requests
+Gemini Client Part 1: Requests
 
 <a href="blog/headless">headless</a> | <pk>2024-07-09</pk>
 Writeup for HackTheBox Headless
