--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <mono>                      </mono>• violinist
 
 
-<a rel="me" href="https://infosec.exchange/@amelia">[fediverse]</a> <a href="mailto:amelia.is.i@protonmail.com">[email]</a> <a href="portfolio/">[portfolio]</a> <y><a href="gemini://tilde.pink/~amelia/">[gemini]</a></y>
+<a rel="me" href="https://infosec.exchange/@amelia">[fediverse]</a> <a href="mailto:amelia.is.i@protonmail.com">[email]</a> <a href="/portfolio.html">[portfolio]</a> <y><a href="gemini://tilde.pink/~amelia/">[gemini]</a></y>
 
 
 <a href="https://github.com/m33ls/chip8">chip8</a> | <pk> 2025-01-13</pk>
