--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="style.css">
-    <title>Graphic Design</title>
+    <title>Amelia's Portfolio</title>
 </head>
 <body>
 
