--- a/portfolio.html
+++ b/portfolio.html
@@ -12,8 +12,10 @@
 <center>
 <div class="photogrid">
     <div class="column">
+	<img class="photo" style="width: 100%;" src="media/header.png">
 	<img class="photo" src="media/corrupted-memory-preview.png">
 	<img class="photo" src="media/chromosomal-violence.png">
+	<img class="photo" src="media/5x5-font-sketch.png">
 	<img class="photo" src="media/mr-robot-screenprint.jpeg">
 	<img class="photo" src="media/sketches.jpg">
         <img class="photo" src="media/triptych.png">
@@ -21,6 +23,7 @@
         <img class="photo" src="media/gif1.gif">	
         <img class="photo" src="media/ipe6.png">
 	<img class="photo" src="media/gif4.gif">
+	<img class="photo" src="media/corrupt-graphics.jpg">
 	<img class="photo" src="media/tomatos-presentation.jpg">
     </div>
 </div>
