--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
 	<img class="photo" src="media/corrupted-memory-preview.png">
 	<img class="photo" src="media/chromosomal-violence.png">
 	<img class="photo" src="media/5x5-font-sketch.png">
-	<img class="photo" src="media/mr-robot-screenprint.jpeg">
+	<img class="photo" src="media/mr-robot-posters.png">
 	<img class="photo" src="media/sketches.jpg">
         <img class="photo" src="media/triptych.png">
 	<img class="photo" src="media/john-singer-sargent-studies.jpg">
